--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     height: 100px;
     background-color: green;
 }
+
