feat: update button's style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,15 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
+
+        &_big {
+            width: 90px;
+        }
+
+        &_space {
+            width: 320px;
+        }
     }
 }
 
