--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,6 +56,7 @@ body {
         justify-content: center;
         align-items: center;
         font-size: 18px;
+        transition: .1s;
         cursor: pointer;
         color: #c4ffff;
 
@@ -66,6 +67,14 @@ body {
 
         &_space {
             width: 320px;
+        }
+
+        &.hover {
+            background-color: rgba($color: #08deea, $alpha: .7);
+        }
+
+        &.active {
+            background-color: rgba($color: #fd8090, $alpha: .7);
         }
     }
 }
