--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,8 @@
 
 body {
     height: 100vh;
-    background-color: black;
+    // background-color: black;
+    background: center / cover no-repeat url('../assets/bg.jpeg');
     display: flex;
     flex-direction: column;
     justify-content: center;
