--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,23 +9,34 @@
 
 body {
     height: 100vh;
-    // background-color: black;
     background: center / cover no-repeat url('../assets/bg.jpeg');
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.keyboard {
+    height: 100%;
+    max-height: 635px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 20px;
-}
+    background-color: rgba($color: #08deea, $alpha: .5);
+    border: 2px solid #08deea;
+    border-radius: 10px 0 10px 0;
 
-.keyboard {
     &__input {
-        background-color: rgba($color: #08deea, $alpha: .5);
-        border: 2px solid #08deea;
+        // background-color: rgba($color: #08deea, $alpha: .5);
+        // border: 2px solid #08deea;
         border-radius: 10px 0 10px 0;
         padding: 20px;
         outline: none;
         resize: none;
+        border: none;
+        background: none;
         width: 850px;
         height: 300px;
         color: #c4ffff;
@@ -53,7 +64,7 @@ body {
         height: 45px;
         width: 45px;
         border-radius: 10px 0 10px 0;
-        background-color: rgba($color: #08deea, $alpha: .5);
+        // background-color: rgba($color: #08deea, $alpha: .5);
         display: flex;
         justify-content: center;
         align-items: center;
