--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,11 @@ body {
     border: 2px solid #08deea;
     border-radius: 10px 0 10px 0;
 
+    &__output {
+        display: flex;
+        width: 850px;
+    }
+
     &__input {
         // background-color: rgba($color: #08deea, $alpha: .5);
         // border: 2px solid #08deea;
@@ -46,11 +51,25 @@ body {
         resize: none;
         border: none;
         background: none;
-        width: 850px;
+        // width: 850px;
         height: 300px;
         color: #c4ffff;
         font-size: 16px;
+        flex: 1px;
 
+    }
+
+    &__info {
+        width: 250px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        white-space: pre-line;
+        color: #c4ffff;
+    }
+
+    &__os {
+        font-size: 12px;
     }
 
     &__wrapper {
