--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,7 @@ body {
         display: flex;
         width: 850px;
         flex: 1;
+        gap: 20px;
     }
 
     &__input {
@@ -56,6 +57,16 @@ body {
         flex: 1;
         color: rgb(209, 203, 189);
         font-size: 16px;
+
+        &::-webkit-scrollbar {
+            width: 5px;
+            background: none;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgb(209, 203, 189);
+            border-radius: 5px;
+        }
     }
 
     &__info {
