--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,6 +109,11 @@ body {
             width: 265px;
         }
 
+        &.isPushed {
+            color: rgba(101, 220, 152, 1);
+            border-color: rgba(101, 220, 152, 1);
+        }
+
         &.hover {
             background-color: rgba(45, 40, 36, .9);
         }
